# sdk-public

./: (example) service.json  .gitignore  license.md  pyproject.toml  readme.md  requirements.txt  scourgify.sh  start_tmux_session.sh
cicada/: cicada_config.json  cicada_db_settings.json
docs/: class.rst  conf.py  detail_overrides.py  dglobals.py  findex.rst  function.rst  index.rst  load_source.py  makedocs.py  module.rst  module_moobius.database.redis_database.rst  module_moobius.json_utils.rst  module_moobius.types.rst  moobius.core.sdk_internal_attrs.rst  render_module.py  requirements.txt  write_class.py  write_findex.py  (+3 more)
src/: README.txt  cicada_main.py  cicada_service.py  config.json  db_settings.json  debug_demo.py  demo.py  demo_agent.py  demo_features.json  demo_magic.py  demo_service.py  pyproject.toml  setup.py  test.py
src/cicada/: utils.py
src/cicada/lib/: cicada_agent.py  cicada_director.py
src/moobius/: __init__.py  json_utils.py  moobius_agent.py  moobius_basic_agent.py  moobius_basic_service.py  moobius_service.py  moobius_wand.py  quickstart.py  types.py  utils.py
src/moobius/basic/: _logging_config.py  _types.py  http_api_wrapper.py  logging_config.py  test_aio.py  types.py  ws_client.py  ws_message_builder.py  ws_payload_builder.py
src/moobius/commons/: http_api_wrapper.py  utils.py  ws_payload_builder.py
src/moobius/core/: agent.py  basic_agent.py  basic_service.py  dtrack.py  groups.py  sdk.py  service.py  storage.py  wand.py
src/moobius/database/: database_helper.py  database_interface.py  json_database.py  json_helper.py  magical_storage.py  null_database.py  redis_database.py  redis_helper.py  storage.py
src/moobius/dbtools/: database_interface.py  magical_storage.py  moobius_band.py  null_database.py  simple_json_database.py  simple_redis_database.py
src/moobius/network/: asserts.py  http_api_wrapper.py  ws_client.py  ws_payload_builder.py
src/test_db/: a.json  b.json  c.json  d.json  e.json
src/utils/: gpt_agent.py  openai.py
(+310 files in other folders)
