[project]
name = "moobius"
version = "1.0.0"
authors = [
  { name="Kevin Kostlan", email="sdk@moobius.app"},
]
description = "Moobius Platform SDK"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/groupultra/sdk-public"
Issues = "https://github.com/groupultra/sdk-public/issues"