[project]
name = "moobius"
version = "1.0.2"
authors = [
  { name="Kevin Kostlan", email="sdk@moobius.app"},
]
description = "Moobius Platform SDK"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"aiohttp>=3.9.1",
"aioprocessing>=2.0.1",
"APScheduler>=3.10.4",
"dacite>=1.8.1",
"redis>=5.0.1",
"Requests>=2.31.0",
"websockets>=12.0",
"loguru>=0.7.2",
]

[project.urls]
Homepage = "https://github.com/groupultra/sdk-public"
Issues = "https://github.com/groupultra/sdk-public/issues"